tests/netconvert/import/XML/errors/xml_looped_edge/net.netconvert
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Tue Oct  4 10:21:24 2016 by SUMO netconvert Version dev-SVN-r21591
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <node-files value="input_nodes.nod.xml"/>
        <edge-files value="input_edges.edg.xml"/>
    </input>

    <output>
        <output-file value="net.net.xml"/>
    </output>

    <report>
        <xml-validation value="never"/>
    </report>

</configuration>
-->

<net version="0.27" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/net_file.xsd">

    <location netOffset="-10000000000.00,-10000000000.00" convBoundary="0.00,0.00,-20000000000.00,-20000000000.00" origBoundary="0.00,0.00,1295.49,190.99" projParameter="!"/>



</net>
